--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
-
+    app:startDestination="@id/lenghtFragment">
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.unitconverter.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
-
+        android:id="@+id/lenghtFragment"
+        android:name="com.example.unitconverter.LenghtFragment"
+        android:label="@string/title_lenght"
+        tools:layout="@layout/fragment_lenght" />
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.unitconverter.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
-
+        android:id="@+id/weightFragment"
+        android:name="com.example.unitconverter.WeightFragment"
+        android:label="@string/title_weight"
+        tools:layout="@layout/fragment_weight" />
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.unitconverter.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/temperatureFragment"
+        android:name="com.example.unitconverter.TemperatureFragment"
+        android:label="@string/title_temperature"
+        tools:layout="@layout/fragment_temperature" />
 </navigation>
