--- a/app/src/main/res/layout/fragment_lenght.xml
+++ b/app/src/main/res/layout/fragment_lenght.xml
@@ -147,6 +147,27 @@
                 android:text="@string/defaultTextNoValue" />
         </TableRow>
 
+        <TableRow
+            android:id="@+id/milimeter_row"
+            android:layout_width="match_parent"
+            android:layout_height="183dp">
+
+            <TextView
+                android:id="@+id/lenght_milimeter_text"
+                android:layout_width="100dp"
+                android:layout_column="1"
+                android:padding="10dip"
+                android:text="@string/milimeter" />
+
+            <TextView
+                android:id="@+id/lenght_milimeter_result"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:paddingHorizontal="150dp"
+                android:text="@string/defaultTextNoValue" />
+        </TableRow>
+
     </TableLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
