--- a/app/src/main/res/layout/fragment_lenght.xml
+++ b/app/src/main/res/layout/fragment_lenght.xml
@@ -21,129 +21,6 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="308dp"
-        android:stretchColumns="1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-
-        <TableRow
-            android:id="@+id/kilometer_row"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/lenght_kilo_text"
-                android:layout_width="100dp"
-                android:layout_column="1"
-                android:gravity="center_horizontal"
-                android:padding="10dip"
-                android:text="@string/kilometer" />
-
-            <TextView
-                android:id="@+id/lenght_kilo_result"
-                android:layout_width="275dp"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:paddingHorizontal="150dp"
-                android:text="@string/defaultTextNoValue" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/meter_row"
-            android:layout_width="match_parent"
-            android:layout_height="43dp">
-
-            <TextView
-                android:id="@+id/lenght_meter_text"
-                android:layout_width="100dp"
-                android:layout_column="1"
-                android:gravity="center_horizontal"
-                android:padding="10dip"
-                android:text="@string/meter" />
-
-            <TextView
-                android:id="@+id/lenght_meter_result"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:paddingHorizontal="150dp"
-                android:text="@string/defaultTextNoValue" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/decimeter_row"
-            android:layout_width="match_parent"
-            android:layout_height="183dp">
-
-            <TextView
-                android:id="@+id/lenght_decimeter_text"
-                android:layout_width="100dp"
-                android:layout_column="1"
-                android:gravity="center_horizontal"
-                android:padding="10dip"
-                android:text="@string/decimeter" />
-
-            <TextView
-                android:id="@+id/lenght_decimeter_result"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:paddingHorizontal="150dp"
-                android:text="@string/defaultTextNoValue" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/centimeter_row"
-            android:layout_width="match_parent"
-            android:layout_height="183dp">
-
-            <TextView
-                android:id="@+id/lenght_centimeter_text"
-                android:layout_width="100dp"
-                android:layout_column="1"
-                android:gravity="center_horizontal"
-                android:padding="10dip"
-                android:text="@string/centimeter" />
-
-            <TextView
-                android:id="@+id/lenght_centimeter_result"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:paddingHorizontal="150dp"
-                android:text="@string/defaultTextNoValue" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/milimeter_row"
-            android:layout_width="match_parent"
-            android:layout_height="183dp">
-
-            <TextView
-                android:id="@+id/lenght_milimeter_text"
-                android:layout_width="100dp"
-                android:layout_column="1"
-                android:gravity="center_horizontal"
-                android:padding="10dip"
-                android:text="@string/milimeter" />
-
-            <TextView
-                android:id="@+id/lenght_milimeter_result"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:paddingHorizontal="150dp"
-                android:text="@string/defaultTextNoValue" />
-        </TableRow>
-
-    </TableLayout>
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
@@ -162,7 +39,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:inputType="none"
-            android:text="Input lenght" />
+            android:text="Input lenght"
+            android:dropDownHeight="300dp"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -175,5 +53,151 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="119dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="32dp"
+        android:fadeScrollbars="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+            <TableRow
+                android:id="@+id/kilometer_row"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/lenght_kilo_text"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:padding="10dip"
+                    android:text="@string/kilometer"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/lenght_kilo_result"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/defaultTextNoValue"
+                    android:textAlignment="center" />
+
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/meter_row"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/lenght_meter_text"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:padding="10dip"
+                    android:text="@string/meter"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/lenght_meter_result"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/defaultTextNoValue"
+                    android:textAlignment="center" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/decimeter_row"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/lenght_decimeter_text"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:padding="10dip"
+                    android:text="@string/decimeter"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/lenght_decimeter_result"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/defaultTextNoValue"
+                    android:textAlignment="center" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/centimeter_row"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/lenght_centimeter_text"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:padding="10dip"
+                    android:text="@string/centimeter"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/lenght_centimeter_result"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/defaultTextNoValue"
+                    android:textAlignment="center" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/milimeter_row"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/lenght_milimeter_text"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:padding="10dip"
+                    android:text="@string/milimeter"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/lenght_milimeter_result"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/defaultTextNoValue"
+                    android:textAlignment="center" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/mile_row"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/lenght_mile_text"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:padding="10dip"
+                    android:text="@string/mile"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/lenght_mile_result"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/defaultTextNoValue"
+                    android:textAlignment="center" />
+            </TableRow>
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
