--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,5 +18,42 @@
         android:id="@+id/otherFragment"
         android:name="com.rennster.unitconverter.OtherFragment"
         android:label="Other"
-        tools:layout="@layout/fragment_other_list" />
+        tools:layout="@layout/fragment_other" >
+        <action
+            android:id="@+id/action_otherFragment_to_temperatureFragment"
+            app:destination="@id/temperatureFragment"
+            app:enterAnim="@android:anim/fade_in" />
+        <action
+            android:id="@+id/action_otherFragment_to_forceFragment"
+            app:destination="@id/forceFragment"
+            app:enterAnim="@android:anim/fade_in" />
+        <action
+            android:id="@+id/action_otherFragment_to_speedFragment"
+            app:destination="@id/speedFragment"
+            app:enterAnim="@android:anim/fade_in" />
+        <action
+            android:id="@+id/action_otherFragment_to_timeFragment"
+            app:destination="@id/timeFragment"
+            app:enterAnim="@android:anim/fade_in" />
+    </fragment>
+    <fragment
+        android:id="@+id/temperatureFragment"
+        android:name="com.rennster.unitconverter.TemperatureFragment"
+        android:label="Temperature"
+        tools:layout="@layout/fragment_temperature" />
+    <fragment
+        android:id="@+id/forceFragment"
+        android:name="com.rennster.unitconverter.ForceFragment"
+        android:label="Force"
+        tools:layout="@layout/fragment_force" />
+    <fragment
+        android:id="@+id/speedFragment"
+        android:name="com.rennster.unitconverter.SpeedFragment"
+        android:label="Speed"
+        tools:layout="@layout/fragment_speed" />
+    <fragment
+        android:id="@+id/timeFragment"
+        android:name="com.rennster.unitconverter.TimeFragment"
+        android:label="Time"
+        tools:layout="@layout/fragment_time" />
 </navigation>
